src/objects/MT_MediaBroadcastData__c.object
<CustomObject>
    <description>Die Ausstrahlungsdaten für Werbemotive, die vom DWH importiert wurden.</description>
    <fields>
        <fullName>MT_BMV__c</fullName>
        <description>Das ausgestrahlte BMV (je nach Kampagnentyp ist dies MB1 oder MB3).</description>
        <label>BMV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BroadcastType__c</fullName>
        <description>Populated via workflow, copies the ProSa order type, but allows filtering on roll ups.</description>
        <label>Broadcast Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_LastImportDate__c</fullName>
        <description>Das Datum der letzten Aktualisierung des Wertes, unabhängig von systeminternen Bearbeitungen.</description>
        <label>Last Import Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MN3__c</fullName>
        <description>Das ausgestrahlte Volumen als MN3</description>
        <label>MN3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MonthlyPlan_ref__c</fullName>
        <description>Der Monat(splan), in dem das Volumen ausgestrahlt wurde.</description>
        <label>Monthly Plan</label>
        <referenceTo>MT_MediaCampaignMonthlyPlan__c</referenceTo>
        <relationshipLabel>Media Broadcast Data</relationshipLabel>
        <relationshipName>Media_Broadcasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>MT_ProSaOrder_Type__c</fullName>
        <description>Fetches the record type of a ProSa Order</description>
        <formula>MT_ProSaOrder_ref__r.RecordType.Name</formula>
        <label>ProSa Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_ProSaOrder_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Der ProSa- Auftrag, über den die Ausstrahlung gebucht wurde.</description>
        <label>ProSa Order</label>
        <referenceTo>MT_ProSaOrder__c</referenceTo>
        <relationshipLabel>Media Broadcast Data</relationshipLabel>
        <relationshipName>Media_Broadcasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Timeslot__c</fullName>
        <description>Die Zeitschiene, in dem das Volumen ausgestrahlt wurde.</description>
        <label>Timeslot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_TvSenderName__c</fullName>
        <description>Der Name des Senders, auf dem das Volumen ausgestrahlt wurde.</description>
        <label>TV Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_TvSenderNumber__c</fullName>
        <description>Die Nummer des Senders, auf dem das Volumen ausgestrahlt wurde.</description>
        <label>TV Sender Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Broadcast Data</label>
    <nameField>
        <displayFormat>MBD-{00000000}</displayFormat>
        <label>Media Broadcast Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Broadcast Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>